Alerts, SSL Dialog, Tor Removed, Fixed Permissions, Args Support, CTRL+L, CTRL+SHIFT+T, Autofocus

--- a/css/tabs.css
+++ b/css/tabs.css
@@ -1,6 +1,6 @@
 .etabs-tabgroup {
   display: inline-flex !important;
-  padding-top: 10px;
+  padding-top: 4px;
   padding-left: 10px;
   position: fixed;
   width: auto;
@@ -20,7 +20,7 @@
   display: none;
   position: relative;
   color: #333;
-  height: 22px;
+  height: 26px;
   padding: 8px 10px 4px 5px;
   border-bottom: none;
   border-left: none;
@@ -28,8 +28,7 @@
   font: caption;
   font-size: 14px;
   cursor: default;
-  transition: all 0.05s;
-  margin-right: 5px;
+  transition: all 0s !important;
 }
 
 .etabs-tab:hover {
@@ -38,8 +37,8 @@
 
 /* Dragula */
 .etabs-tab.gu-transit {
-  box-shadow:inset 0px 0px 0px 2px rgba(0,0,0,0.035) !important;
-  background:rgba(0,0,0,0.035) !important;
+  box-shadow:inset 0px 0px 0px 2px rgba(255,255,255,0.035) !important;
+  background:rgba(255,255,255,0.035) !important;
 }
 
 .etabs-tab.gu-transit > * {
@@ -51,7 +50,9 @@
 }
 
 .etabs-tab.gu-mirror {
-  height: 22px !important;
+  height: 26px !important;
+  width: 262px !important;
+  border-radius: 4px !important;
 }
 
 .etabs-tab:first-child {
@@ -61,7 +62,7 @@
 .etabs-tab.visible {
   display: inline-flex;
   float: left;
-  border-radius: 4px;
+  border-radius: 4px 4px 0px 0px;
   bottom: 3px;
   padding-bottom: 6px;
 }
@@ -76,7 +77,7 @@
   background: linear-gradient(90deg, #f3f3f300 0%, #f3f3f3 50%, #f3f3f380 100%);
   position: absolute;
   right: 20px;
-  height: 97%;
+  height: 90%;
   top: 0.5px;
   z-index: 5;
 }
@@ -95,7 +96,8 @@
 }
 
 .etabs-buttons button {
-  margin-top: 1px;
+  margin-left: 5px;
+  margin-top: 2px;
   color: #333;
   background: none;
   border: none;
@@ -150,8 +152,8 @@
   letter-spacing: -0.25px;
   width: 200px;
   white-space: nowrap;
-  overflow: auto;
-  margin-top: 2px;
+  overflow: hidden;
+  margin-top: 4px;
   display: inline-block;
   margin-left: 30px;
 }
@@ -168,6 +170,11 @@
   background: none;
   border: none;
   width: 20px;
+  height: 24px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
   text-align: center;
   border-radius: 4px;
   padding-right: 16px;
@@ -185,9 +192,9 @@
 }
 
 .etabs-views {
-  height: calc(100% - 98px);
+  height: calc(100% - 89px);
   width: 100%;
   position: fixed;
-  margin-top: 98px;
+  margin-top: 89px;
   background: transparent;
 }
